@@ -4,6 +4,8 @@ ubiquity (1.99.18) UNRELEASED; urgency=low
   * Do not provide an inaccurate remaining time estimate for the file copy
     process (LP: #199834).  Thanks rugby471!
   * Call reboot as root.  Thanks Mario Limonciello!
+  * Don't let the user proceed past the timezone page until a selection has
+    been made (LP 425011).
 
   [ Michael Terry ]
   * Add a default oem-config post-install hook that restarts HAL.  This lets
